Fix spacing between button and input field

--- a/src/components/AddTaskInput/AddTaskInput.css
+++ b/src/components/AddTaskInput/AddTaskInput.css
@@ -1,4 +1,4 @@
 .textfield {
-    flex: 90%;
-    padding: 10px;
+    width: 80%;
+    /* margin: 5px; */
 }
