--- a/src/components/Button/AddButton.css
+++ b/src/components/Button/AddButton.css
@@ -1,3 +1,3 @@
 .button {
-    flex: 10%;
+    width: 18%
 }
